2006-08-08  David Schleef  <ds@schleef.org>

	* esddsp.c: intercept open64() and other 64-bit variants.
	  Patch from Peter Åstrand.  Fixes #312665.

2006-08-07  David Schleef  <ds@schleef.org>

	* configure.ac: Fix linker flags with CoreAudio.  Fixes #313433.

2006-08-07  David Schleef  <ds@schleef.org>

	* players.c: Add check for return value of read.  Patch from
	  Fernando Herrera.  Fixes #337415.

2006-08-07  David Schleef  <ds@schleef.org>

	* players.c: Add checks for client disconnecting.  Patch from
	  Peter Åstrand.  Fixes #322206.

2006-08-07  David Schleef  <ds@schleef.org>

	* configure.ac: Check for audiofile.h.  Fixes #319464.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.c: Remove bogus call to hstrerror().  Fixes #319968.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.c: Don't terminate until last sample is finished playing.
	  Fixes #342729.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.c: close master socket in error cases. Fixes #314407.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.c: Close file descriptors after startup.  Fixes #333186.

2006-08-07  David Schleef  <ds@schleef.org>

	* esd.conf: Turn autospawning off by default.  Don't use
	  autospawning.  It doesn't work, and it isn't possible to
	  make it work.  esd should always be started from the session
	  manager.
	* esd_config.c:

2006-05-10  David Schleef  <ds@schleef.org>

	* m4/as-arts.m4: Fix arts detection.  Fixes #341251.  Patch
	  from Vladislav G. Mikhailikov.

2006-04-13  Behdad Esfahbod  <behdad@gnome.org>

	* esdlib.c: Fix build break.

2006-04-13  Kjartan Maraas  <kmaraas@gnome.org>

	* clients.c: (get_new_clients): Fix leak. Coverity #743
	and #875.
	* esd.c: (main): Fix null deref. Coverity #223
	* esdlib.c: Fix null deref. Coverity bug #775
	* esdmgr.c: (esd_get_all_info): Fix leaks. Coverity #773
	and #875.

2005-09-30  David Schleef  <ds@schleef.org>

	* Makefile.am: Don't compile util.o into esd binary, since it's